# agym

./: .gitattributes  .gitignore  Makefile  README.md  mypy.ini  pytest.ini  readme.md  requirements.txt  setup.py
agym/: agym.py  config.py  enums.py  game_area.py  game_functions.py  items.py  model.py  param.py  settings.py  stats.py  tea.py  unit_tests.py
agym/games/: __init__.py  abstract.py  abstract_game_enviroment.py
src/: pyproject.toml  setup.cfg
src/agym/: __main__.py  agym.py  audio_handler.py  config.py  constants.py  containers.py  di.py  dtos.py  game_monitor.py  interfaces.py  labels.py  main_window.py  many_breakouts.py  param.py  protocols.py  rendering.py  settings.py
src/agym/audio_kit/: __init__.py  kit.py
src/agym/audio_kit/engines/: __init__.py
src/agym/audio_kit/engines/pygame/: __init__.py  engine.py
src/agym/clocks/: __init__.py  framerate.py
src/agym/dtos/: __init__.py  breakout.py  color.py  common.py  env.py  event.py  io_framework.py  key.py  rect.py  shift.py  size.py
src/agym/env_components/breakout/: __init__.py  audio_handler.py  env_renderer.py  model_manual.py
src/agym/env_components/many_breakouts/: __init__.py  env.py  renderer.py
src/agym/event_sources/: __init__.py  pygame.py
src/agym/game_models/: __init__.py  breakout_manual.py
src/agym/games/: __init__.py  abstract.py  protocols.py
src/agym/games/breakout/: __init__.py  collision.py  constants.py  dtos.py  env.py  events.py  geom.py  items.py  level_builder.py  manual_model.py  protocols.py  state.py
src/agym/games/breakout/collisions/: __init__.py  detector.py  dtos.py  kdtree.py  legacy.py  legacy_collision.py  naive.py  precise.py
src/agym/games/breakout/dtos/: __init__.py  action.py  collisions.py  events.py  items.py
src/agym/games/breakout/geom/: __init__.py  circle.py  intersecting.py  line.py  point.py  protocols.py  rectangle.py  segment.py  triangle.py
src/agym/games/breakout/geom/basic/: __init__.py  point.py
src/agym/games/breakout/geom/kdtree/: __init__.py  node.py  record.py  scores.py  tree.py
src/agym/games/breakout/geom/shapes/: __init__.py  circle.py  rectangle.py  triangle.py
src/agym/games/breakout/levels/: __init__.py  default.py  empty.py  item_manager.py  level.py  performance.py
src/agym/gui/: __init__.py  button.py  check_box.py  label.py  menu.py
src/agym/gui/render_kits/: __init__.py  kit.py
src/agym/gui/render_kits/engines/: __init__.py
src/agym/gui/render_kits/engines/pygame/: engine.py  font.py  screen.py
src/agym/gui/render_kits/pygame/: __init__.py  font.py  kit.py  screen.py
src/agym/io_frameworks/: __init__.py  audio_kit.py  render_kit.py
src/agym/io_frameworks/pygame/: __init__.py  clock.py  framework.py
src/agym/io_frameworks/pygame/audio_kit/: __init__.py  engine.py  sound.py
src/agym/io_frameworks/pygame/render_kit/: __init__.py
src/agym/io_frameworks/wrappers/: __init__.py  clock_framerate.py
src/agym/model_wrappers/: __init__.py  abstract.py
src/agym/model_wrappers/empty/: __init__.py  wrapper.py
src/agym/model_wrappers/qlearning/: __init__.py  sarsa.py
src/agym/models/: __init__.py  abstract.py
src/agym/models/gen_algo/: individual.py  model.py  population.py
src/agym/models/manual/: model.py
src/agym/models/qvalues/: __init__.py  conv_model.py
src/agym/protocols/: __init__.py  audio.py  clock.py  env.py  event.py  io_framework.py  model.py  render.py  sound.py  update.py
src/agym/renderers/: __init__.py  empty.py  env.py  game_monitor.py  kdtree.py  label.py  many_breakouts.py
src/agym/updaters/: __init__.py  compose.py  fps.py  limit.py  profile.py
src/agym/utils/: __init__.py  cached_collection.py  fps.py  math.py  queue.py  replay_buffer.py  timemanager.py
src/custom_queue/: pyproject.toml
src/custom_queue/custom_queue/: __init__.py
src/envs/: pyproject.toml
src/envs/envs/: protocols.py
src/envs/envs/breakout/: __init__.py  constants.py  env.py  protocols.py  state.py
src/envs/envs/breakout/collisions/: __init__.py  cached_collection.py  detector.py  kdtree.py  legacy_collision.py  naive.py  precise.py
src/envs/envs/breakout/dtos/: action.py  collisions.py  events.py  items.py
src/envs/envs/breakout/levels/: __init__.py  default.py  empty.py  item_manager.py  performance.py
src/geometry/: pyproject.toml
src/geometry/geometry/: intersecting.py
src/geometry/geometry/basic/: __init__.py  line.py  point.py  segment.py
src/geometry/geometry/kdtree/: __init__.py  node.py  record.py  scores.py  tree.py
src/geometry/geometry/shapes/: __init__.py  circle.py  rectangle.py  triangle.py
src/tests/: conftest.py  math_utils.py  testing_levels.py
src/tests/conftests/: __init__.py  audio.py  audio_kit.py  breakout.py  clock.py  env.py  event_source.py  fps.py  game_monitor.py  io_framework.py  labels.py  log_updater.py  main_window.py  pygame.py  render_kit.py  sound_kit.py  timing.py
src/tests/conftests/renderers/: __init__.py  empty.py  env.py  game_monitor.py
src/tests/gui/: conftest.py  game_model.py  gui_test_runner.py  test_breakout_collision.py
src/tests/integration/: test_breakout_collision.py  test_game_monitor.py
src/tests/integration/breakout_collisions/: conftest.py  test_ball_ball.py  test_ball_block.py  test_ball_platform.py  test_ball_wall.py  test_platform_wall.py
src/tests/levels/: ball_ball.py  ball_block.py  ball_platform.py  ball_wall.py  compose.py  dtos.py  platform_wall.py
src/tests/unit/: test_game_monitor.py  test_geom.py  test_kdtree.py
src/tests/unit/geom/: test_circle_cirle.py  test_circle_segment.py  test_circle_triangle.py  test_line_line.py  test_triangle_triangle.py
src/tests/unit/geom/intersections/: test_circle_cirle.py  test_circle_segment.py  test_circle_triangle.py  test_line_line.py  test_rect_rect.py  test_segment_segment.py  test_triangle_triangle.py
src/tests/unit/geom/kdtree/: test_node.py  test_score.py  test_tree.py  test_tree_building.py  test_tree_intersecting.py  tree_utils.py
src/timeprofiler/: pyproject.toml
src/timeprofiler/timeprofiler/: __init__.py  timemanager.py
(+28 files in other folders)
