[tool.poetry]
name = "timeprofiler"
version = "0.1.0"
description = ""
authors = ["Anton Novikov <thescir@yandex.ru>"]

[tool.poetry.dependencies]
python = "3.8"
custom_queue = {path = "../custom_queue", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
